# ComfyUI-naginagi-vibe-lab

./: .gitignore  LICENSE  README.md  README_en.md  ROADMAP.md  __init__.py  nodes_common.py  nodes_corrector.py  nodes_scheduler.py  pyproject.toml  requirements.txt
docs/: corrector.md  humangate.md  scheduler.md
humangate/: __init__.py  _build_examples.py  _workflow_builder.py  constants.py  exceptions.py  image_utils.py  nodes.py  server.py  sessions.py
humangate/examples/: workflow_sample.json
humangate/tests/: test_sessions.py
web/: humangate.css  humangate.js
workflows/: 01_llm_conditioning_corrector.json  02_t5gemma_conditioning_correction.json  03_sdxl_iterative_refinement.json
