[project]
name = "comfyui-naginagi-vibe-lab"
description = "A slightly experimental, quite weird, and lovingly ponkotsu ComfyUI node collection by naginagi."
version = "1.1.0"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torch>=2.0",
  "numpy",
]

[project.urls]
Repository = "https://github.com/<your-account>/ComfyUI-naginagi-vibe-lab"
"Bug Tracker" = "https://github.com/<your-account>/ComfyUI-naginagi-vibe-lab/issues"

# -----------------------------------------------------------------------------
# ComfyUI Registry / Manager 用メタデータ
#   https://docs.comfy.org/registry/specifications
# -----------------------------------------------------------------------------
[tool.comfy]
PublisherId = "naginagi"
DisplayName = "naginagi vibe-lab"
Icon = ""
includes = []
